Merge trait_info into stat_info menu and redesign layout